[gd_scene load_steps=10 format=3 uid="uid://chpr27lm25485"]

[ext_resource type="ArrayMesh" uid="uid://b7nb05oipn7ic" path="res://Resources/Towers/normalTower/normal_tower_lvl1.obj" id="1_1agug"]
[ext_resource type="Texture2D" uid="uid://b1ms4h5mcmjd0" path="res://Resources/Towers/hexagons_medieval.png" id="2_muqog"]
[ext_resource type="Script" path="res://Scripts/normal_tower.gd" id="3_0d14h"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2s2kb"]
transparency = 1
albedo_texture = ExtResource("2_muqog")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6dkr0"]
transparency = 1
albedo_texture = ExtResource("2_muqog")

[sub_resource type="BoxShape3D" id="BoxShape3D_ccfuv"]
size = Vector3(0.86119, 2.2778, 1)

[sub_resource type="SphereShape3D" id="SphereShape3D_ke3xq"]
radius = 5.0

[sub_resource type="CylinderMesh" id="CylinderMesh_fevqt"]
top_radius = 5.0
bottom_radius = 5.0
height = 0.001

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ksthd"]
render_priority = 2
transparency = 1
albedo_color = Color(0, 0, 0, 0.537255)

[node name="Normal_tower_lvl1" type="MeshInstance3D" groups=["towers"]]
mesh = ExtResource("1_1agug")
surface_material_override/0 = SubResource("StandardMaterial3D_2s2kb")
surface_material_override/1 = SubResource("StandardMaterial3D_6dkr0")
script = ExtResource("3_0d14h")

[node name="StaticBody3D" type="StaticBody3D" parent="." groups=["towers"]]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.90222e-05, 1.04169, 0)
shape = SubResource("BoxShape3D_ccfuv")

[node name="MobDetector" type="Area3D" parent="."]

[node name="Range" type="CollisionShape3D" parent="MobDetector"]
shape = SubResource("SphereShape3D_ke3xq")

[node name="Ran" type="MeshInstance3D" parent="MobDetector"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2, 0)
mesh = SubResource("CylinderMesh_fevqt")
surface_material_override/0 = SubResource("StandardMaterial3D_ksthd")

[node name="Shooting CD" type="Timer" parent="."]

[node name="Bullets" type="Node" parent="."]

[node name="Aim2" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.60146, 0)
gizmo_extents = 0.7

[connection signal="input_event" from="StaticBody3D" to="." method="_on_static_body_3d_input_event"]
[connection signal="body_entered" from="MobDetector" to="." method="_on_mob_detector_body_entered"]
[connection signal="body_exited" from="MobDetector" to="." method="_on_mob_detector_body_exited"]
[connection signal="timeout" from="Shooting CD" to="." method="_on_shooting_cd_timeout"]
